force-app/main/default/objects/NDA__c/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For buyer-side NDAs in the Disposition module - links the NDA to the Disposition it protects (Opportunity is left blank in this context).</description>
    <label>Disposition</label>
    <referenceTo>Disposition__c</referenceTo>
    <relationshipLabel>NDAs</relationshipLabel>
    <relationshipName>NDAs</relationshipName>
    <type>Lookup</type>
</CustomField>