force-app/main/default/objects/NDA__c/fields/Is_Non_Expiring__c.field-meta.xml
<CustomField>
    <fullName>Is_Non_Expiring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Suppresses expiry tracking for this NDA (e.g. NDAs that must never expire for Nick). Filtered out of the expiring-NDA reports.</description>
    <label>Never Expires</label>
    <type>Checkbox</type>
</CustomField>