force-app/main/default/objects/NDA__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <label>Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DocuSign</fullName>
            </value>
            <value>
                <fullName>Wet Sign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>