force-app/main/default/objects/NDA__c/fields/NDA_Alert_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>NDA_Alert_Expiry_Date__c</fullName>
    <description>System-maintained snapshot of the NDA_Expiry_Date__c value that NDA_Alert_Last_Interval__c was computed against. When this differs from the live NDA_Expiry_Date__c, the marker is treated as blank and the whole expiry reminder ladder re-arms. Clearing this field re-arms the ladder. Not for manual entry.</description>
    <label>NDA Alert Expiry Date</label>
    <type>Date</type>
</CustomField>