force-app/main/default/objects/NDA__c/fields/NDA_Alert_Last_Interval__c.field-meta.xml
<CustomField>
    <fullName>NDA_Alert_Last_Interval__c</fullName>
    <description>System-maintained expiry-alert marker. Holds the smallest reminder-ladder rung (in days before NDA_Expiry_Date__c) already notified by NdaExpiryAlertBatch. Not for manual entry - see NDA_Alert_Expiry_Date__c, its required companion snapshot.</description>
    <label>NDA Alert Last Interval</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>