force-app/main/default/objects/NDA__c/fields/NDA_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>NDA_Expiry_Date__c</fullName>
    <label>NDA Expiry Date</label>
    <type>Date</type>
</CustomField>