force-app/main/default/objects/NDA__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Additional NDA terms, special clauses, or legal notes. Used when the NDA contains unusual provisions.</description>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>